force-app/main/default/objects/tc9_et__Timesheet__c/tc9_et__Timesheet__c.object-meta.xml
<CustomObject>
    <description>A master object that holds details of time worked, expenses and allowances. The Timesheet holds header information and groups Timesheet Entries, Expenses and Allowances so they can go through a submission/approval process</description>
    <label>Timesheet</label>
    <nameField>
        <displayFormat>TS-{0000000000}</displayFormat>
        <label>Timesheet</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>