force-app/main/default/objects/tc9_et__Timesheet__c/fields/Reversal_Due_to_Leave__c.field-meta.xml
<CustomField>
    <fullName>Reversal_Due_to_Leave__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox is auto-checked when an approved or processed timesheet is reversed due to leave being approved for the same period</inlineHelpText>
    <label>Reversal Due to Leave</label>
    <type>Checkbox</type>
</CustomField>