force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_3bint__Adjustment_Pending__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Adjustment_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adjustment Pending</label>
    <type>Checkbox</type>
</CustomField>