force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_3bint__Costing_Job_Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Costing_Job_Status__c</fullName>
    <label>Costing Job Status</label>
    <type>TextArea</type>
</CustomField>