force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Approval_Status_Colour__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Approval_Status_Colour__c</fullName>
    <description>The Approval Status of the Timesheet</description>
    <formula>Case(
     Text(tc9_et__Approval_Status__c), 
     &quot;Approved&quot;,
    (IMAGE(LEFT($Api.Partner_Server_URL_260,FIND(&apos;/services&apos;,$Api.Partner_Server_URL_260))+&quot;resource/tc9_et__t2pJ_Images/t2pJ_Images/WordApproved.png&quot;,&quot;Approved&quot;,20,88)),
     &quot;Rejected&quot;,
    (IMAGE(LEFT($Api.Partner_Server_URL_260,FIND(&apos;/services&apos;,$Api.Partner_Server_URL_260))+&quot;resource/tc9_et__t2pJ_Images/t2pJ_Images/WordRejected.png&quot;,&quot;Rejected&quot;,20,88)),
     &quot;Submitted&quot;,
    (IMAGE(LEFT($Api.Partner_Server_URL_260,FIND(&apos;/services&apos;,$Api.Partner_Server_URL_260))+&quot;resource/tc9_et__t2pJ_Images/t2pJ_Images/WordSubmitted.png&quot;,&quot;Submitted&quot;,20,88)),
     &quot;New&quot;,
    (IMAGE(LEFT($Api.Partner_Server_URL_260,FIND(&apos;/services&apos;,$Api.Partner_Server_URL_260))+&quot;resource/tc9_et__t2pJ_Images/t2pJ_Images/WordNew.png&quot;,&quot;New&quot;,20,88)),
    Text(tc9_et__Approval_Status__c)
    )</formula>
    <inlineHelpText>The Approval Status of the Timesheet</inlineHelpText>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>