force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Approved_on_Behalf_Notify_Approver__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Approved_on_Behalf_Notify_Approver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the Timesheet was approved on Behalf of the Approver, this field indicates that an email will be sent to the Approver to notify them of the approval</description>
    <inlineHelpText>If the Timesheet was approved on Behalf of the Approver, this field indicates that an email will be sent to the Approver to notify them of the approval</inlineHelpText>
    <label>Approved on Behalf Notify Approver</label>
    <type>Checkbox</type>
</CustomField>