force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Approved_Rejected_By__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Approved_Rejected_By__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Approver who approved/rejected the Timesheet</description>
    <inlineHelpText>The Approver who approved/rejected the Timesheet</inlineHelpText>
    <label>Approved/Rejected By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Timesheets Approved/Rejected By Contact</relationshipLabel>
    <relationshipName>Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>