force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Approved_Rejected_on_Behalf_User__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Approved_Rejected_on_Behalf_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the Timesheet was approved/rejected on Behalf of the Approver, this field records the User who approved/rejected the Timesheet</description>
    <inlineHelpText>If the Timesheet was approved/rejected on Behalf of the Approver, this field records the User who approved/rejected the Timesheet</inlineHelpText>
    <label>Approved/Rejected on Behalf User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Timesheets2</relationshipName>
    <type>Lookup</type>
</CustomField>