force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Assignment__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Assignment that applies to the Timesheet</description>
    <inlineHelpText>Defines the Assignment that applies to the Timesheet</inlineHelpText>
    <label>Assignment</label>
    <referenceTo>tc9_pr__Assignment__c</referenceTo>
    <relationshipLabel>Timesheets</relationshipLabel>
    <relationshipName>Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>