force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Employee__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the Employee that applies to the Timesheet</description>
    <inlineHelpText>Defines the Employee that applies to the Timesheet</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Employee&apos;s Timesheets</relationshipLabel>
    <relationshipName>Time_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>