force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Employee_Notes__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Employee_Notes__c</fullName>
    <description>Comments the Employee has made against the Timesheet</description>
    <inlineHelpText>Comments the Employee has made against the Timesheet</inlineHelpText>
    <label>Employee Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>