force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Exclude_From_Alternative_Appr_Remin_List__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Exclude_From_Alternative_Appr_Remin_List__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if a Timesheet will be excluded from Bulk Alternative Approver Reminder listings. When TRUE the Timesheet will be excluded from Bulk Alternative Approver Reminders. Reminders can only be send on the individual basis via the Timesheets</description>
    <label>Exclude From Alternative Appr Remin List</label>
    <type>Checkbox</type>
</CustomField>