force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Exclude_From_Employee_Rejection_List__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Exclude_From_Employee_Rejection_List__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if a Timesheet will be excluded from Bulk Employee Rejection listings. When TRUE the Timesheet will be excluded from Bulk Employee Rejection. Rejection emails can only be send on the individual basis via the Timesheets</description>
    <inlineHelpText>Defines if a Timesheet will be excluded from Bulk Employee Rejection listings. When TRUE the Timesheet will be excluded from Bulk Employee Rejection. Rejection emails can only be send on the individual basis via the Timesheets</inlineHelpText>
    <label>Exclude From Employee Rejection List</label>
    <type>Checkbox</type>
</CustomField>