force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Flagged_For_Review__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Flagged_For_Review__c</fullName>
    <description>Identifies if the Timesheet is flagged for the User to review</description>
    <formula>False</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies if the Timesheet is flagged for the User to review</inlineHelpText>
    <label>Flagged For Review</label>
    <type>Checkbox</type>
</CustomField>