force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Hide_In_Communities__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Hide_In_Communities__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Timesheet will be hidden on the Employee and Approver Community</description>
    <inlineHelpText>Indicates if the Timesheet will be hidden on the Employee and Approver Community</inlineHelpText>
    <label>Hide In Communities</label>
    <type>Checkbox</type>
</CustomField>