force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Interpretation_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Interpretation_Rule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the Interpretation Rule that will be used in the processing of Timesheets into Pay Transactions</description>
    <inlineHelpText>Defines the Interpretation Rule that will be used in the processing of Timesheets into Pay Transactions</inlineHelpText>
    <label>Interpretation Rule</label>
    <referenceTo>tc9_et__Interpretation_Rule__c</referenceTo>
    <relationshipLabel>Timesheets</relationshipLabel>
    <relationshipName>Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>