force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Last_Alternative_Approver_Request_Sent__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Last_Alternative_Approver_Request_Sent__c</fullName>
    <description>Defines the Date/Time the last email was sent to notify the Alternative Approver of the Timesheet submission and request its approval</description>
    <inlineHelpText>Defines the Date/Time the last email was sent to notify the Alternative Approver of the Timesheet submission and request its approval</inlineHelpText>
    <label>Last Alternative Approver Request Sent</label>
    <type>DateTime</type>
</CustomField>