force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Last_Employee_Rejection_Sent__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Last_Employee_Rejection_Sent__c</fullName>
    <description>Defines the Date/Time the last email was sent to the Employee to advise the Timesheet is rejected. This field is reset to blank on re-submission</description>
    <inlineHelpText>Defines the Date/Time the last email was sent to the Employee to advise the Timesheet is rejected. This field is reset to blank on re-submission</inlineHelpText>
    <label>Last Employee Rejection Sent</label>
    <type>DateTime</type>
</CustomField>