force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Leave_Loading_Interpretation_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Leave_Loading_Interpretation_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The interpretation rule used for leave loading calculation if dual interpretation loading calculations applied.</description>
    <inlineHelpText>The interpretation rule used for leave loading calculation if dual interpretation loading calculations applied.</inlineHelpText>
    <label>Leave Loading Interpretation Rule</label>
    <referenceTo>tc9_et__Interpretation_Rule__c</referenceTo>
    <relationshipLabel>Timesheets (Leave Loading Interpretation Rule)</relationshipLabel>
    <relationshipName>Timesheets1</relationshipName>
    <type>Lookup</type>
</CustomField>