force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Minimum_Hours_Flag__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Minimum_Hours_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if the Timesheet was deemed to not have reached minimum hours specified on the Interpretation Rule</description>
    <inlineHelpText>Defines if the Timesheet was deemed to not have reached minimum hours specified on the Interpretation Rule</inlineHelpText>
    <label>Minimum Hours Flag</label>
    <type>Checkbox</type>
</CustomField>