force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Payee__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Payee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Payee that applies to the Timesheet</description>
    <inlineHelpText>Defines the Payee that applies to the Timesheet</inlineHelpText>
    <label>Payee</label>
    <referenceTo>tc9_pr__Payee__c</referenceTo>
    <relationshipLabel>Timesheets</relationshipLabel>
    <relationshipName>Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>