force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Primary_Approver_Current_Link_Token__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Primary_Approver_Current_Link_Token__c</fullName>
    <description>The Primary Timesheet Approvers current Timesheet Link Token. Used on email templates</description>
    <formula>tc9_et__Assignment__r.tc9_et__Timesheet_Approver__r.tc9_pr__Approver_Link_Token__c</formula>
    <inlineHelpText>The Primary Timesheet Approvers current Timesheet Link Token. Used on email templates</inlineHelpText>
    <label>Primary Approver Current Link Token</label>
    <type>Text</type>
</CustomField>