force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Process_Time_Off_in_Lieu__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Process_Time_Off_in_Lieu__c</fullName>
    <description>To indicate if the Timesheet should be processed as Time Off in Lieu instead of Overtime.</description>
    <inlineHelpText>To indicate if the Timesheet should be processed as Time Off in Lieu instead of Overtime.</inlineHelpText>
    <label>Process Time Off in Lieu</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>