force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Rejection_Comments__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Rejection_Comments__c</fullName>
    <description>If the Timesheet has an Approval Status of Rejected, this field defines the reason given by the Approver for the rejection.</description>
    <inlineHelpText>If the Timesheet has an Approval Status of Rejected, this field defines the reason given by the Approver for the rejection.</inlineHelpText>
    <label>Rejection Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>