force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Related_Split_Over_Month_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Related_Split_Over_Month_Timesheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related timesheet, if a timesheet has been split into 2 timesheets by the Split Timesheets Over Months functionality.</description>
    <inlineHelpText>The related timesheet, if a timesheet has been split into 2 timesheets by the Split Timesheets Over Months functionality.</inlineHelpText>
    <label>Related Split Over Month Timesheet</label>
    <referenceTo>tc9_et__Timesheet__c</referenceTo>
    <relationshipLabel>Timesheets</relationshipLabel>
    <relationshipName>Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>