force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Shift_Generation_Owner__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Shift_Generation_Owner__c</fullName>
    <description>Indicates the source system that populated the Shift fields on the Timesheet Entry record for the Timesheet.</description>
    <inlineHelpText>Indicates the source system that populated the Shift fields on the Timesheet Entry record for the Timesheet.</inlineHelpText>
    <label>Shift Generation Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Shift_Generation_Owner_Picklist</valueSetName>
    </valueSet>
</CustomField>