force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Start_Date__c</fullName>
    <description>Indicates the Start Date of the Timesheet</description>
    <inlineHelpText>Indicates the Start Date of the Timesheet</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>