force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Start_Day__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Start_Day__c</fullName>
    <description>Indicates the start day of the Timesheet</description>
    <inlineHelpText>Indicates the start day of the Timesheet</inlineHelpText>
    <label>Start Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Days_Picklists</valueSetName>
    </valueSet>
</CustomField>