force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Submitted_Date__c</fullName>
    <description>The Date/Time the Timesheet was Submitted</description>
    <inlineHelpText>The Date/Time the Timesheet was Submitted</inlineHelpText>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>