force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Timesheet_Frequency__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Timesheet_Frequency__c</fullName>
    <description>Defines the Timesheet Frequency that applies to the Timesheet</description>
    <formula>text( tc9_et__Assignment__r.tc9_et__Timesheet_Calendar__r.tc9_et__Timesheet_Frequency__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Defines the Timesheet Frequency that applies to the Timesheet</inlineHelpText>
    <label>Timesheet Frequency</label>
    <type>Text</type>
</CustomField>