force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Timesheet_Manager__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Timesheet_Manager__c</fullName>
    <description>Not in use</description>
    <formula>&quot;NOT IN USE&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Not in use</inlineHelpText>
    <label>Not In Use</label>
    <type>Text</type>
</CustomField>