force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Timesheet_Split_Over_Months__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Timesheet_Split_Over_Months__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to True for timesheets that have been split into 2 timesheets by the Split Timesheets Over Months functionality</description>
    <inlineHelpText>Set to True for timesheets that have been split into 2 timesheets by the Split Timesheets Over Months functionality</inlineHelpText>
    <label>Timesheet Split Over Months</label>
    <type>Checkbox</type>
</CustomField>