force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Timesheet_Support_Contact__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Timesheet_Support_Contact__c</fullName>
    <description>The Timesheet Support Contact details as defined on the related notification setting. Used on email templates</description>
    <formula>if (
not(isblank(tc9_et__Assignment__r.tc9_pr__Client__r.tc9_et__Timesheet_Notification_Setting_Override__c)),
 tc9_et__Assignment__r.tc9_pr__Client__r.tc9_et__Timesheet_Notification_Setting_Override__r.tc9_pr__Support_Contact_Details__c ,
tc9_et__Assignment__r.tc9_pr__Schedule__r.tc9_et__Timesheet_Notification_Setting__r.tc9_pr__Support_Contact_Details__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Timesheet Support Contact details as defined on the related notification setting. Used on email templates</inlineHelpText>
    <label>Timesheet Support Contact</label>
    <type>Text</type>
</CustomField>