force-app/main/default/objects/tc9_et__Timesheet__c/fields/tc9_et__Total_Approved_Timesheet_Allowances__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Total_Approved_Timesheet_Allowances__c</fullName>
    <description>The Count of the total number of Timesheet Allowances related to the Timesheet with the Approval Flag set as checked</description>
    <inlineHelpText>The Count of the total number of Timesheet Allowances related to the Timesheet with the Approval Flag set as checked</inlineHelpText>
    <label>Total Approved Timesheet Allowances</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>